added VVM filter to SOH API - StockCardSummaries API V3
added VVM to SOH API

added VVM to SOH API

added VVM to SOH API - Objects class fix

added VVM to SOH API - CustomImportOrder

added VVM to SOH API - CustomImportOrder 2

select last lineItem of stockcard for summary (SOH) extra data

select last lineItem of stockcard for summary (SOH) extra data

relaxed Spring security for testing StockCardSummariesV2Controller

relaxed Spring security for testing StockCardSummariesV2Controller

reverting back to secure

relaxed Spring security for testing

relaxed Spring security for testing 2

relaxed Spring security for testing 2

relaxed Spring security for testing 2

added referencedata url

changed referencedata url

changed referencedata url

log messages in service

log messages in service

log messages in service

log messages in service

log messages in service

log messages in service

log messages in service

log messages in service

log messages in service

log messages in service

log messages in service

log messages in service

log messages in service

log messages in service

log messages in service

enabled security

enabled log statements in code

enabled log statements in code

enabled log statements in code

enabled log statements in code

enabled log statements in code

Merged PR 58: report templates edited

report templates edited

checking if vvm status is received

Revert "Merged PR 58: report templates edited"

This reverts commit faa89f5d8806f2661feb06f7357ee769fc02a9b2.

added StockCardSummaries API V3 - filter by VVM
