# src/main/resources/api-definition.yaml
@@ -422,6 +422,130 @@ traits:
             application/json:
               schema: localizedMessage
 
+    /test:
+      get:
+        is: [ secured ]
+        description: Get stock card summary report in PDF format to print.
+        queryParameters:
+          facilityId:
+            required: true
+            description: Facility id, indicates the facility that the queried stock card summaries should belong to.
+            repeat: false
+            type: string
+          programId:
+            required: true
+            description: Program id, indicates the program that the queries stock card summaries is under.
+            repeat: false
+            type: string
+          orderableId:
+            required: false
+            description: Orderable id, indicates the orderable that the queries stock card summaries is under, can specify multiple orderable ids.
+            repeat: true
+            type: string
+          asOfDate:
+            required: false
+            description: Stock Card data will be calculated as of given date.
+            repeat: false
+            type: string
+          nonEmptyOnly:
+            required: false
+            description: Flag defining whether only summaries with non empty set of canFulfillForMe should be returned. Defaults to false.
+            repeat: false
+            type: boolean
+          orderableCode:
+            required: false
+            description: Code of orderable
+            repeat: false
+            type: string
+          orderableName:
+            required: false
+            description: Name of orderable
+            repeat: false
+            type: string
+          lotCode:
+            required: false
+            description: Lot code of orderables which can fulfill stock card
+            repeat: false
+            type: string
+        responses:
+          200:
+            body:
+              application/json:
+          400:
+            body:
+              application/json:
+                schema: localizedMessage
+          403:
+            description: User does not have permission to view stock cards of given facility and program.
+            body:
+              application/json:
+                schema: localizedMessage
+
+  /v3/stockCardSummaries:
+    get:
+      is: [ secured, paginated ]
+      description: Get summaries of stock cards, which contains SOH, product name, and other essential information. This will NOT return any line items. (This could be used by front end for list view.)
+      queryParameters:
+        facilityId:
+          required: true
+          description: Facility id, indicates the facility that the queried stock card summaries should belong to.
+          repeat: false
+          type: string
+        programId:
+          required: true
+          description: Program id, indicates the program that the queries stock card summaries is under.
+          repeat: false
+          type: string
+        orderableId:
+          required: false
+          description: Orderable id, indicates the orderable that the queries stock card summaries is under, can specify multiple orderable ids.
+          repeat: true
+          type: string
+        asOfDate:
+          required: false
+          description: Stock Card data will be calculated as of given date.
+          repeat: false
+          type: string
+        nonEmptyOnly:
+          required: false
+          description: Flag defining whether only summaries with non empty set of canFulfillForMe should be returned. Defaults to false.
+          repeat: false
+          type: boolean
+        orderableCode:
+          required: false
+          description: Code of orderable
+          repeat: false
+          type: string
+        orderableName:
+          required: false
+          description: Name of orderable
+          repeat: false
+          type: string
+        lotCode:
+          required: false
+          description: Lot code of orderables which can fulfill stock card
+          repeat: false
+          type: string
+        vvmStatus:
+          required: false
+          description: VVM Status of orderables which can fulfill stock card
+          repeat: false
+          type: string
+      responses:
+        200:
+          body:
+            application/json:
+              schema: stockCardSummariesPage
+        400:
+          body:
+            application/json:
+              schema: localizedMessage
+        403:
+          description: User does not have permission to view stock cards of given facility and program.
+          body:
+            application/json:
+              schema: localizedMessage
+
   /stockCardRangeSummaries:
       get:
           is: [ secured, paginated ]
